# audit-backend

./: .dockerignore  .gitignore  CNAME  Dockerfile  README.md  ecosystem.config.js  package-lock.json  package.json  pm2.sh  pyproject.toml
src/: __init__.py  app.py  app.ts  index.ts  types.ts
src/agents/: agent_logging.py  closed_role_agent.py  job_data_agent.py  open_role_agent.py  url_extraction_agent.py
src/api/: audit.ts  index.ts
src/controllers/: __init__.py  audit.py  index.py  instances.py  scrape.py  tasks.py
src/interfaces/: ErrorResponse.ts
src/lib/: supabase.ts
src/routes/: __init__.py  audit.py  index.py  instances.py  positions.py  scrape.py  tasks.py
src/services/: browserbase.py  cloud_storage.py  cloud_tasks.py  compute_engine.py  directus.py  playwright.py  supabase.py
src/types/: audit.py  jobs.py  tasks.py
src/utils/: logging_config.py  scrape.py  utils.py
