[project]
name = "audit-backend-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.48",
    "fastapi[standard]>=0.115.12",
    "google-cloud-tasks>=2.19.2",
    "loguru>=0.7.3",
    "prettyprinter>=0.18.0",
    "pyobjtojson>=0.3",
    "supabase>=2.15.1",
]
